--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,10 @@
 
 .App-logo {
   height: 80px;
-  margin-top: 38px;
+  width: min-content;
+  margin-top: 30px;
   margin-left: 20px;
+
   grid-row-start: 0;
   grid-row-end: 1;
   grid-column-start: 0;
@@ -78,9 +80,27 @@ a{
 }
 
 
-.MainContent{
+.ProfileContent{
   grid-row-start: 2;
   grid-row-end: 3;
   grid-column-start: 1;
   grid-column-end: 2;
+
+  display: grid;
+}
+
+.ProfileContent img{
+  grid-column-start: 0;
+  grid-column-end: 1;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.ProfileContent .Status{
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 0;
+  grid-row-end: 1;
+
+  width: max-content;
 }
