--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .App{
   display: grid;
+  width: 100%;
+  height: 100%;
+  /* position: absolute; */
   grid-template-rows: 100px 50px 1fr 50px;
-  grid-template-columns: 200px 1fr 200px;
+  grid-template-columns: 300px 1fr 300px;
   grid-gap: 100px;
-
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -12,15 +14,17 @@
   }
 }
 
+
+
 .App-Header {
   grid-column-start: 0;
-  grid-column-end: 3;
+  grid-column-end: 4;
   grid-row-start: 0;
   grid-row-end: 2;
 
   position: absolute;
-  width: 100%;
-  background-color: #2c3038;
+  width: 100%; 
+  background-color: rgb(53, 53, 53);
   min-height: 150px;
   display: grid;
   font-size: calc(10px + 2vmin);
@@ -30,7 +34,7 @@
 .App-logo {
   height: 80px;
   width: min-content;
-  margin-top: 30px;
+  margin-top: 35px;
   margin-left: 20px;
 
   grid-row-start: 0;
@@ -68,39 +72,25 @@
   width: 200px;
   height: max-content;
   font-style: italic;
-  border: solid rgb(3, 3, 3);
+  font-size: 1.2em;
+  font-weight: 600;
+  font-feature-settings: "vrt2";
+  border-right: solid rgb(114, 2, 2) 3px;
 }
 
 .item{
-  color:maroon;
+  color:rgb(128, 3, 3);
 }
 
 a{
   text-decoration: none;
+  color: rgb(10, 0, 56);
 }
 
 
 .ProfileContent{
   grid-row-start: 2;
   grid-row-end: 3;
-  grid-column-start: 1;
-  grid-column-end: 2;
-
-  display: grid;
-}
-
-.ProfileContent img{
-  grid-column-start: 0;
-  grid-column-end: 1;
-  grid-row-start: 1;
-  grid-row-end: 2;
-}
-
-.ProfileContent .Status{
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 0;
-  grid-row-end: 1;
-
-  width: max-content;
+  grid-column-start: 2;
+  grid-column-end: 3;
 }
