--- a/src/components/Content/Profile/ProfileContent.module.css
+++ b/src/components/Content/Profile/ProfileContent.module.css
@@ -4,15 +4,9 @@
     display: grid;
     grid-template-columns: 200px 1fr 400px;
     grid-template-rows: 300px 1fr;
-    margin-left: 350px;
-    margin-top: 200px;
-    border: 4px solid #1f1f1f;
-    background-color: rgb(51, 51, 51);
-    background-clip: border-box;
-    color: rgb(255, 229, 197);
-    width: max-content;
-    height: max-content;
-    position: absolute;
+    /* margin-left: 350px;
+    margin-top: 200px; */
+    /* position: absolute; */
 }
   
 .word{
