--- a/src/components/Content/Dialogs/Companions/Companions.module.css
+++ b/src/components/Content/Dialogs/Companions/Companions.module.css
@@ -1,8 +1,9 @@
-.companion{
+.a{
     display: grid;
     max-width: 370px;
     font-style: italic;
     grid-template-columns: 120px 1fr;
+    color: rgb(244, 241, 175);
 }
 
 .img{
@@ -11,7 +12,6 @@
     grid-column: 1;
     grid-row: 1/2;
     margin-top: 1em;
-    margin-left: 1em;
 }
 
 .name{
