--- a/src/components/Content/Dialogs/Dialogs.module.css
+++ b/src/components/Content/Dialogs/Dialogs.module.css
@@ -13,6 +13,7 @@
     height: 680px;
     margin-top: 1em;
     border-left: 2px solid rgb(0, 0, 0);
+    /* background: rgb(51, 51, 51) url("https://www.teahub.io/photos/full/340-3406101_-.jpg") no-repeat fixed 780px -100px; */
 }
 
 .header_window_dialog{
